--- a/package.json
+++ b/package.json
@@ -1,30 +1,25 @@
 {
-  "name": "MEAN",
+  "name": "restful_api_for-end_term_proj",
   "version": "1.0.0",
-  "description": "A MEAN app that allows users to manage contact lists",
-  "main": "server.js",
+  "description": "",
+  "main": "sever.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/chrisckchang/mean-contactlist.git"
+    "url": "git+https://github.com/letrungtiennbk9/restful_api_for-end_term_proj.git"
   },
-  "keywords": [
-    "MEAN",
-    "Express",
-    "Angular"
-  ],
-  "author": "Chris Chang",
-  "license": "MIT",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/chrisckchang/mean-contactlist/issues"
+    "url": "https://github.com/letrungtiennbk9/restful_api_for-end_term_proj/issues"
   },
-  "homepage": "https://github.com/chrisckchang/mean-contactlist",
+  "homepage": "https://github.com/letrungtiennbk9/restful_api_for-end_term_proj#readme",
   "dependencies": {
-    "body-parser": "^1.13.3",
-    "express": "^4.13.3",
-    "mongodb": "^2.0.43"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongodb": "^3.3.4"
   }
 }
